--- a/platform_in/Dockerfile
+++ b/platform_in/Dockerfile
@@ -12,21 +12,14 @@ ENV PYTHONUNBUFFERED 1
 COPY requirements.txt .
 
 RUN \
- apk update && apk add bash &&\ 
- apk add --no-cache python3 postgresql-libs && \
- apk add --no-cache --virtual .build-deps gcc python3-dev musl-dev postgresql-dev && \
+ apk update && \
+ #apk add bash && \ 
+ apk add --no-cache --virtual .build-deps gcc python3-dev musl-dev && \
  apk add --no-cache librdkafka librdkafka-dev && \
- apk add netcat-openbsd &&\
+ #apk add netcat-openbsd &&\
  python3 -m pip install -r requirements.txt --no-cache-dir && \
  apk --purge del .build-deps
-
- # add entrypoint.sh
-#COPY ./entrypoint.sh /project/entrypoint.sh
-#RUN chmod +x /project/entrypoint.sh
 
 # add app
 COPY . /project/
 
-#ENTRYPOINT ["/project/entrypoint.sh"]
-# run server
-#CMD python manage.py run -h 0.0.0.0
