--- a/platform_in/requirements.txt
+++ b/platform_in/requirements.txt
@@ -1,13 +1,14 @@
 
-avro==1.9.2
+wheel
+avro-python3==1.9.1
 confluent-kafka==1.3.0
-elastic-apm==5.5.2
-Flask==1.0.2
-Flask-RESTful==0.3.8
-Flask-Security==3.0.0
-gunicorn==19.10.0
-pytest==4.6.9
-redis==3.4.1
-requests==2.22.0
-rq==1.2.2
-
+requests
+confluent-kafka[avro,jsonschema,protobuf]
+elastic-apm
+Flask
+Flask-Security
+gunicorn
+Jinja2
+pytest
+requests
+certifi
