remove unwanted py lib and docker system packages

--- a/platform_in/Dockerfile
+++ b/platform_in/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.8.0-alpine
+FROM python:3.8-slim-buster
 
 # set working directory
 WORKDIR /project
@@ -11,12 +11,7 @@ ENV PYTHONUNBUFFERED 1
 # add and install requirements
 COPY requirements.txt .
 
-RUN apk update  && \
-  apk add --no-cache postgresql-libs postgresql-dev ca-certificates gcc musl-dev libressl-dev libc-dev librdkafka librdkafka-dev python-dev netcat-openbsd bash && \
-  python3 -m pip install -r requirements.txt --no-cache-dir 
-
-COPY chain.pem .
-RUN cat chain.pem >> /usr/local/lib/python3.8/site-packages/certifi/cacert.pem
+RUN python3 -m pip install -r requirements.txt
 
 # add app
 COPY . /project/
