--- a/platform_in/Dockerfile.prod
+++ b/platform_in/Dockerfile.prod
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.8.0-alpine
+FROM python:3.8-slim-buster
 
 # set working directory
 WORKDIR /project
@@ -10,19 +10,19 @@ ENV PYTHONUNBUFFERED 1
 ENV FLASK_ENV production
 ENV APP_SETTINGS project.config.ProductionConfig
 
+## install nc
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends netcat-openbsd
+
 # add and install requirements
 COPY requirements.txt .
 
-RUN apk update  && \
-  apk add --no-cache postgresql-libs postgresql-dev ca-certificates gcc musl-dev libressl-dev libc-dev librdkafka librdkafka-dev python-dev netcat-openbsd bash && \
-  python3 -m pip install -r requirements.txt --no-cache-dir 
+RUN python3 -m pip install -r requirements.txt
+#apt-get update  && \
 
-COPY chain.pem .
-RUN cat chain.pem >> /usr/local/lib/python3.8/site-packages/certifi/cacert.pem
+# add and run as non-root user
+RUN addgroup --system appuser && adduser --system --no-create-home --group appuser
+RUN chown -R appuser:appuser /project
 
- # add and run as non-root user
-RUN addgroup -S app && adduser -S app -G app
-RUN chown -R app:app /project
-
-USER app
+USER appuser
 
