--- a/platform_in/Dockerfile.prod
+++ b/platform_in/Dockerfile.prod
@@ -8,7 +8,8 @@ WORKDIR /project
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV FLASK_ENV production
-ENV APP_SETTINGS project.config.ProductionConfig
+ENV APP_SETTINGS app.config.ProductionConfig
+ENV FLASK_APP app/__init__.py
 
 ## install nc
 RUN apt-get update && \
